--- a/docs/emails/cryptography/1.md
+++ b/docs/emails/cryptography/1.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Bitcoin P2P e-cash paper
-grand_parent: Cryptography
+grand_parent: Emails
+parent: Cryptography
 nav_order: 1
 ---
