--- a/docs/emails/cryptography/1.md
+++ b/docs/emails/cryptography/1.md
@@ -2,6 +2,6 @@
 layout: default
 title: Bitcoin P2P e-cash paper
 grand_parent: Emails
-parent: Cryptography
+parent: Cryptography Mailing List
 nav_order: 1
 ---
