--- a/docs/emails/cryptography/1.md
+++ b/docs/emails/cryptography/1.md
@@ -5,3 +5,54 @@ grand_parent: Emails
 parent: Cryptography Mailing List
 nav_order: 1
 ---
+
+# Bitcoin P2P e-cash paper
+
+The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+{: .fs-6 .fw-300 } 
+
+```
+I've been working on a new electronic cash system that's fully
+peer-to-peer, with no trusted third party.
+
+The paper is available at:
+http://www.bitcoin.org/bitcoin.pdf
+
+The main properties:
+ Double-spending is prevented with a peer-to-peer network.
+ No mint or other trusted parties.
+ Participants can be anonymous.
+ New coins are made from Hashcash style proof-of-work.
+ The proof-of-work for new coin generation also powers the
+    network to prevent double-spending.
+
+Bitcoin: A Peer-to-Peer Electronic Cash System
+
+Abstract.  A purely peer-to-peer version of electronic cash would
+allow online payments to be sent directly from one party to another
+without the burdens of going through a financial institution.
+Digital signatures provide part of the solution, but the main
+benefits are lost if a trusted party is still required to prevent
+double-spending.  We propose a solution to the double-spending
+problem using a peer-to-peer network.  The network timestamps
+transactions by hashing them into an ongoing chain of hash-based
+proof-of-work, forming a record that cannot be changed without
+redoing the proof-of-work.  The longest chain not only serves as
+proof of the sequence of events witnessed, but proof that it came
+from the largest pool of CPU power.  As long as honest nodes control
+the most CPU power on the network, they can generate the longest
+chain and outpace any attackers.  The network itself requires
+minimal structure.  Messages are broadcasted on a best effort basis,
+and nodes can leave and rejoin the network at will, accepting the
+longest proof-of-work chain as proof of what happened while they
+were gone.
+
+Full paper at:
+http://www.bitcoin.org/bitcoin.pdf
+
+Satoshi Nakamoto
+
+---------------------------------------------------------------------
+The Cryptography Mailing List
+Unsubscribe by sending "unsubscribe cryptography" to majordomo at metzdowd.com
+```
