Update and rename docs/emails/pre-release/1.md to docs/emails/wei-dai/1.md

--- a/docs/emails/wei-dai/1.md
+++ b/docs/emails/wei-dai/1.md
@@ -2,6 +2,6 @@
 layout: default
 title: Citation of your b-money page
 grand_parent: Emails
-parent: Pre-Release
+parent: Wei Dai
 nav_order: 1
 ---
