--- a/docs/emails/wei-dai/2.md
+++ b/docs/emails/wei-dai/2.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Re: Citation of your b-money page
+title: "Re: Citation of your b-money page"
 grand_parent: Emails
 parent: Wei Dai
 nav_order: 2
