--- a/docs/emails/bitcoin-list/5.md
+++ b/docs/emails/bitcoin-list/5.md
@@ -2,7 +2,7 @@
 layout: default
 title: “Re: [bitcoin-list] Bitcoin v0.1 released”
 grand_parent: Emails
-parent: bitcoin-list
+parent: "bitcoin-list"
 nav_order: 5
 ---
 
