--- a/docs/emails/bitcoin-list/5.md
+++ b/docs/emails/bitcoin-list/5.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: “Re: [bitcoin-list] Bitcoin v0.1 released”
+title: [bitcoin-list] Bitcoin v0.1 released
 grand_parent: Emails
 parent: "bitcoin-list"
 nav_order: 5
