--- a/docs/emails/bitcoin-list/5.md
+++ b/docs/emails/bitcoin-list/5.md
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: [bitcoin-list] Bitcoin v0.1 released
+title: “Re: [bitcoin-list] Bitcoin v0.1 released”
 grand_parent: Emails
-parent: "bitcoin-list"
+parent: bitcoin-list
 nav_order: 5
 ---
 
