--- a/docs/emails/bitcoin-list/5.md
+++ b/docs/emails/bitcoin-list/5.md
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: [bitcoin-list] Bitcoin v0.1 released
-grand_parent: Email
+title: “[bitcoin-list] Bitcoin v0.1.3”
+grand_parent: Emails
 parent: bitcoin-list
 nav_order: 5
 ---
