--- a/docs/emails/bitcoin-list/6.md
+++ b/docs/emails/bitcoin-list/6.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: “Re: [bitcoin-list] Problems”
+title: “[bitcoin-list] Problems”
 grand_parent: Emails
 parent: bitcoin-list
 nav_order: 6
