--- a/docs/emails/bitcoin-list/2.md
+++ b/docs/emails/bitcoin-list/2.md
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: “[bitcoin-list] Bitcoin v0.1.2 now available”
+title: '[bitcoin-list] Bitcoin v0.1.2 now available'
 grand_parent: Emails
 parent: bitcoin-list
 nav_order: 2
 ---
 
-# Bitcoin P2P e-cash paper
+# [bitcoin-list] Bitcoin v0.1.2 now available
 
 The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
 {: .fs-6 .fw-300 } 
