--- a/docs/emails/cryptography/16.md
+++ b/docs/emails/cryptography/16.md
@@ -7,7 +7,7 @@ nav_order: 16
 date: 2009-01-08 19:27:40 UTC
 ---
 
-# Bitcoin P2P e-cash paper
+# Bitcoin v0.1 released
 
 The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
 {: .fs-6 .fw-300 } 
