--- a/docs/emails/wei-dai/1.md
+++ b/docs/emails/wei-dai/1.md
@@ -12,10 +12,10 @@ date: 2008-08-22 16:38
 ---
 
 ```
-From: "Satoshi Nakamoto" <satoshi@anonymousspeech.com>
+From: Satoshi Nakamoto <satoshi@anonymousspeech.com>
 Sent: Friday, August 22, 2008 4:38 PM
-To: "Wei Dai" <weidai@ibiblio.org>
-Cc: "Satoshi Nakamoto" <satoshi@anonymousspeech.com>
+To: Wei Dai <weidai@ibiblio.org>
+Cc: Satoshi Nakamoto <satoshi@anonymousspeech.com>
 Subject: Citation of your b-money page
 
 I was very interested to read your b-money page.  I'm getting ready to
