--- a/docs/emails/mike-hearn/1.md
+++ b/docs/emails/mike-hearn/1.md
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Questions about BitCoin
+title: 'Re: Questions about BitCoin'
 date: 2009-04-12 22:44:00 
 grand_parent: Emails
 parent: Mike Hearn
 nav_order: 1
 ---
 
-# Questions about BitCoin
+# Re: Questions about BitCoin
 
 The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
 {: .fs-6 .fw-300 } 
@@ -19,7 +19,7 @@ The email on the Cryptography Mailing List that announced Bitcoin publicly to th
 From: Satoshi Nakamoto <satoshin@gmx.com>
 Date: Sun, Apr 12, 2009 at 10:44 PM
 To: Mike Hearn <mike@plan99.net>
-Subject: Questions about BitCoin
+Subject: Re: Questions about BitCoin
  
 Hi Mike,
  
