--- a/docs/emails/bitcoin-list/3.md
+++ b/docs/emails/bitcoin-list/3.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: “[bitcoin-list] Bitcoin v0.1 Alpha release notes”
+title: '[bitcoin-list] Bitcoin v0.1 Alpha release notes'
 grand_parent: Emails
 parent: bitcoin-list
 nav_order: 3
