--- a/docs/emails/bitcoin-list/4.md
+++ b/docs/emails/bitcoin-list/4.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: “[bitcoin-list] Bitcoin v0.1.3”
+title: [bitcoin-list] Bitcoin v0.1.3
 grand_parent: Emails
 parent: bitcoin-list
 nav_order: 4
