--- a/docs/emails/bitcoin-list/5.md
+++ b/docs/emails/bitcoin-list/5.md
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: “[bitcoin-list] Bitcoin v0.1 released”
+title: 'Re: [bitcoin-list] Bitcoin v0.1 released'
 grand_parent: Emails
 parent: bitcoin-list
 nav_order: 5
 ---
 
-# Bitcoin P2P e-cash paper
+# Re: [bitcoin-list] Bitcoin v0.1 released
 
 The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
 {: .fs-6 .fw-300 } 
