--- a/docs/emails/bitcoin-list/6.md
+++ b/docs/emails/bitcoin-list/6.md
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: “[bitcoin-list] Problems”
+title: 'Re: [bitcoin-list] Problems'
 grand_parent: Emails
 parent: bitcoin-list
 nav_order: 6
 ---
 
-# Bitcoin P2P e-cash paper
+# Re: [bitcoin-list] Problems
 
 The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
 {: .fs-6 .fw-300 } 
