--- a/docs/emails/bitcoin-list/7.md
+++ b/docs/emails/bitcoin-list/7.md
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: “[bitcoin-list] Problems”
+title: '[bitcoin-list] Bitcoin v0.1.5 released'
 grand_parent: Emails
 parent: bitcoin-list
 nav_order: 7
 ---
 
-# Bitcoin P2P e-cash paper
+# [bitcoin-list] Bitcoin v0.1.5 released
 
 The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
 {: .fs-6 .fw-300 } 
