--- a/docs/emails/mike-hearn/14.md
+++ b/docs/emails/mike-hearn/14.md
@@ -46,8 +46,8 @@ It was part of writing code to explore the most technically demanding use cases 
 >
 >http://www.bitcoin.org/smf/index.php?topic=3414.msg48171#msg48171
 >
->But I didn't understand your comment about having 200 bytes for backwards compatibility. Also, I guess this is obvious, but to be super clear - in your idea the alternative chains would share exactly the same format and sets of verification rules as BitCoin (the same script language etc), so all miners can verify all blocks even if they are non-financial in nature? And then the point of having separate block chains is simply to manage storage costs and bandwidth for client-mode implementations?
- 
+>But I didn't understand your comment about having 200 bytes for backwards compatibility. Also, I guess this is obvious, but to be super clear - in >your idea the alternative chains would share exactly the same format and sets of verification rules as BitCoin (the same script language etc), so all >miners can verify all blocks even if they are non-financial in nature? And then the point of having separate block chains is simply to manage storage >costs and bandwidth for client-mode implementations?
+
 No, other chains do not follow Bitcoin's rules.  They are completely independent chains.  They share nothing except the miners.  The other network's definition of proof-of-work is to make a solved (according to their own chain's difficulty) Bitcoin-format block that has a hash of their own block in it.  They don't care if the Bitcoin block is valid or used by Bitcoin, but it allows miners to work both chains at once.
  
 Procedure to hash a BitDNS block:
