--- a/docs/emails/gavin-andresen/1.md
+++ b/docs/emails/gavin-andresen/1.md
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: 'Satoshi's Last Email'
+title: 'Last Email'
 grand_parent: Emails
 parent: Gavin Andresen
 nav_order: 1
+date: 2011-04-26
 ---
 
 # Satoshi's Last Email
