--- a/docs/emails/gavin-andresen/1.md
+++ b/docs/emails/gavin-andresen/1.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'Last Email'
+title: 'Last Email from Satoshi'
 grand_parent: Emails
 parent: Gavin Andresen
 nav_order: 1
