--- a/docs/emails/laszlo-hanec/1.md
+++ b/docs/emails/laszlo-hanec/1.md
@@ -6,7 +6,7 @@ parent: Laszlo Hanec
 nav_order: 1
 ---
 
-# Re: Introduction
+# Satoshi Email's Laszlo Hanec
 
 The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
 {: .fs-6 .fw-300 } 
