--- a/docs/emails/p2p-research/1.md
+++ b/docs/emails/p2p-research/1.md
@@ -15,6 +15,11 @@ The email on the Cryptography Mailing List that announced Bitcoin publicly to th
 ---
 
 ```
+Date: Wed, 11 Feb 2009 22:30:54 +0000
+From: Satoshi Nakamoto <satoshin@gmx.com>
+To: p2presearch@listcultures.org
+Subject: [p2p-research] Bitcoin open source implementation of P2P currency
+
 I've developed a new open source P2P e-cash system called Bitcoin.  It's 
 completely decentralized, with no central server or trusted parties, 
 because everything is based on crypto proof instead of trust.  Give it a 
