--- a/docs/emails/p2p-research/1.md
+++ b/docs/emails/p2p-research/1.md
@@ -76,4 +76,9 @@ each other, with the help of the P2P network to check for double-spending.
 
 Satoshi Nakamoto
 http://www.bitcoin.org
+
+_______________________________________________
+p2presearch mailing list
+p2presearch@listcultures.org
+http://listcultures.org/mailman/listinfo/p2presearch_listcultures.org
 ```
