--- a/docs/emails/p2p-research/2.md
+++ b/docs/emails/p2p-research/2.md
@@ -3,7 +3,7 @@ layout: default
 title: 'Re: [p2p-research] Bitcoin open source implementation of P2P'
 date: 2009-02-12 20:01:24 CET 
 grand_parent: Emails
-parent: '[p2p-research'
+parent: '[p2p-research]'
 nav_order: 2
 ---
 
