--- a/docs/emails/p2p-research/1.md
+++ b/docs/emails/p2p-research/1.md
@@ -3,7 +3,7 @@ layout: default
 title: 'Bitcoin open source implementation of P2P currency'
 date: 2009-02-11 23:30:54 CET
 grand_parent: Emails
-parent: '[p2p-research'
+parent: '[p2p-research]'
 nav_order: 1
 ---
 
