--- a/docs/emails/p2p-research/3.md
+++ b/docs/emails/p2p-research/3.md
@@ -29,63 +29,43 @@ Martien van Steenbergen wrote:
 
 That's do-able.  It can be programmed to follow any set of rules.
 
-I see Bitcoin as a foundation and first step if you want to implement =
-
-programmable P2P social currencies like Marc's ideas and others =
-
-discussed here.  First you need normal, basic P2P currency working. =
-
-Once that is established and proven out, dynamic smart money is an easy =
-
+I see Bitcoin as a foundation and first step if you want to implement 
+programmable P2P social currencies like Marc's ideas and others 
+discussed here.  First you need normal, basic P2P currency working. 
+Once that is established and proven out, dynamic smart money is an easy 
 next step.
 
-I love the idea of virtual, non-geographic communities experimenting =
-
+I love the idea of virtual, non-geographic communities experimenting 
 with new economic paradigms.
 
 > Reminds me of:
-> =
-
->     * AardRock =BB Wizard Rabbit Treasurer
+> 
+>     * AardRock » Wizard Rabbit Treasurer
 >       <http://wiki.aardrock.com/Wizard_Rabbit_Treasurer>; and
->     * AardRock =BB Pekunio <http://wiki.aardrock.com/Pekunio>
+>     * AardRock » Pekunio <http://wiki.aardrock.com/Pekunio>
 
-Indeed, it is much like Pekunio in the concept of spraying redundant =
-
-copies of every transaction to a number of peers on the network, but the =
-
-implementation is not a reputation network like Wizard Rabbit Treasurer. =
-
-  In fact, Bitcoin does not use reputation at all.  It sees the network =
-
-as just a big crowd and doesn't much care who it talks to or who tells =
-
-it something, as long as at least one of them relays the information =
-
-being broadcast around the network.  It doesn't care because there's no =
-
-way to lie to it.  Either you tell it crypto proof of something, or it =
-
+Indeed, it is much like Pekunio in the concept of spraying redundant 
+copies of every transaction to a number of peers on the network, but the 
+implementation is not a reputation network like Wizard Rabbit Treasurer. 
+  In fact, Bitcoin does not use reputation at all.  It sees the network 
+as just a big crowd and doesn't much care who it talks to or who tells 
+it something, as long as at least one of them relays the information 
+being broadcast around the network.  It doesn't care because there's no 
+way to lie to it.  Either you tell it crypto proof of something, or it 
 ignores you.
 
 > Are you familiar with Ripple?
 
-As trust systems go, Ripple is unique in spreading trust around rather =
-
+As trust systems go, Ripple is unique in spreading trust around rather 
 than concentrating it.
 
-> Is bitcoin also available as a protocol spec (facilitating differen =
-
-> language bindings and implementations; unite on specs, compete on =
-
+> Is bitcoin also available as a protocol spec (facilitating differen 
+> language bindings and implementations; unite on specs, compete on 
 > implementation).
 
-It would be best to refer to the C++ source code.  I plan to implement =
-
-interfaces for using the software to send and receive transactions from =
-
-any language, so server side code can easily use it for web based =
-
+It would be best to refer to the C++ source code.  I plan to implement 
+interfaces for using the software to send and receive transactions from 
+any language, so server side code can easily use it for web based 
 e-commerce sites.
 
 Satoshi
