--- a/docs/emails/p2p-research/2.md
+++ b/docs/emails/p2p-research/2.md
@@ -19,44 +19,30 @@ Date: Thu, 12 Feb 2009 19:01:24 +0000
 From: Satoshi Nakamoto <satoshin@gmx.com>
 To: p2presearch@listcultures.org
 Subject: Re: [p2p-research] Bitcoin open source implementation of P2P
-
 Martien van Steenbergen wrote:
-> Very interesting. Is this akin to David Chaum's anonymous digital money? =
+> Very interesting. Is this akin to David Chaum's anonymous digital money? 
+> His concept makes sure money is anonymous unless it is compromised, i.e. 
+> the same money spent more than once. As soon as it's compromised, the 
+> ‘counterfeiter’ is immediately publicly exposed.
 
-> His concept makes sure money is anonymous unless it is compromised, i.e. =
-
-> the same money spent more than once. As soon as it's compromised, the =
-
-> =91counterfeiter=92 is immediately publicly exposed.
-
-It's similar in that it uses digital signatures for coins, but different =
-
-in the approach to privacy and preventing double-spending.  The =
-
-recipient of a Bitcoin payment is able to check whether it is the first =
-
-spend or not, and second-spends are not accepted.  There isn't an =
-
-off-line mode where double-spenders are caught and shamed after the =
-
+It's similar in that it uses digital signatures for coins, but different 
+in the approach to privacy and preventing double-spending.  The 
+recipient of a Bitcoin payment is able to check whether it is the first 
+spend or not, and second-spends are not accepted.  There isn't an 
+off-line mode where double-spenders are caught and shamed after the 
 fact, because that would require participants to have identities.
 
-To protect privacy, key pairs are used only once, with a new one for =
-
+To protect privacy, key pairs are used only once, with a new one for 
 every transaction.  The owner of a coin is just whoever has its private key.
 
-Of course, the biggest difference is the lack of a central server.  That =
-
-was the Achilles heel of Chaumian systems; when the central company shut =
-
+Of course, the biggest difference is the lack of a central server.  That 
+was the Achilles heel of Chaumian systems; when the central company shut 
 down, so did the currency.
 
-> Also, in bitcoin, is there a limited supply of money (that must be =
-
+> Also, in bitcoin, is there a limited supply of money (that must be 
 > managed)? Or is money created exaclty at the moment of transaction?
 
-There is a limited supply of money.  Circulation will be 21,000,000 =
-
+There is a limited supply of money.  Circulation will be 21,000,000 
 coins.  Transactions only transfer ownership.
 
 Thank you for your questions,
