--- a/docs/emails/wei-dai/1.md
+++ b/docs/emails/wei-dai/1.md
@@ -9,6 +9,9 @@ date: 2008-08-22 16:38
 
 # Citation of your b-money page
 
+Satoshi's first known email with an early draft of the whitepaper titled 'Electronic Cash Without a Trusted Third Party.'
+{: .fs-6 .fw-300 } 
+
 ---
 
 ```
