--- a/docs/emails/cryptography/2.md
+++ b/docs/emails/cryptography/2.md
@@ -9,7 +9,7 @@ date: 2008-11-03 01:37:43 UTC
 
 # Bitcoin P2P e-cash paper
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi's response to concerns about scaling Bitcoin, Visa, and a distinction between nodes and users. 
 {: .fs-6 .fw-300 } 
 
 ---
