--- a/docs/emails/cryptography/3.md
+++ b/docs/emails/cryptography/3.md
@@ -9,7 +9,7 @@ date: 2008-11-03 16:23:49 UTC
 
 # Bitcoin P2P e-cash paper
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Bitcoin creates a system that incentivises honesty over cheating.
 {: .fs-6 .fw-300 } 
 
 ---
