--- a/docs/emails/cryptography/4.md
+++ b/docs/emails/cryptography/4.md
@@ -9,7 +9,7 @@ date: 2008-11-06 20:15:40 UTC
 
 # Bitcoin P2P e-cash paper
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi explains Bitcoin as a possible, though incomplete, tool for freedom.
 {: .fs-6 .fw-300 } 
 
 ---
