--- a/docs/emails/cryptography/5.md
+++ b/docs/emails/cryptography/5.md
@@ -9,7 +9,7 @@ date: 2008-11-08 18:54:38 UTC
 
 # Bitcoin P2P e-cash paper
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi explains the Bitcoin inflation schedule and how the difficulty of mining adjusts when more computing power is added to the network.
 {: .fs-6 .fw-300 } 
 
 ---
