--- a/docs/emails/p2p-research/2.md
+++ b/docs/emails/p2p-research/2.md
@@ -9,7 +9,7 @@ nav_order: 2
 
 # Re: [p2p-research] Bitcoin open source implementation of P2P
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi explains the difference between Bitcoin and Chaumiam cash.
 {: .fs-6 .fw-300 } 
 
 ---
