--- a/docs/emails/bitcoin-list/1.md
+++ b/docs/emails/bitcoin-list/1.md
@@ -2,7 +2,7 @@
 layout: default
 title: '[bitcoin-list] Welcome'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 1
 date: 2008-12-10 17:00:23 UTC
 ---
