--- a/docs/forum/p2p-foundation/1.md
+++ b/docs/forum/p2p-foundation/1.md
@@ -1,7 +1,7 @@
 ---
 layout: forum
 title: Bitcoin open source implementation of P2P currency
-grand_parent: Forum
+grand_parent: Forum Posts
 parent: P2P Foundation
 nav_order: 1
 date: 2009-02-11 22:27:00 UTC
