--- a/docs/forum/p2p-foundation/1.md
+++ b/docs/forum/p2p-foundation/1.md
@@ -6,6 +6,11 @@ parent: P2P Foundation
 nav_order: 1
 date: 2009-02-11 22:27:00 UTC
 ---
+
+# Bitcoin open source implementation of P2P currency
+
+---
+
 ```
 I've developed a new open source P2P e-cash system called Bitcoin. It's completely decentralized, with no central server or trusted parties, because everything is based on crypto proof instead of trust. Give it a try, or take a look at the screenshots and design paper:
 
