--- a/docs/forum/p2p-foundation/3.md
+++ b/docs/forum/p2p-foundation/3.md
@@ -5,7 +5,7 @@ grand_parent: Forum Posts
 parent: P2P Foundation
 nav_order: 3
 date: 2009-02-18 20:50:00 UTC
-original
+original: http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source?commentId=2003008%3AComment%3A9562
 ---
 
 # Bitcoin open source implementation of P2P currency
