--- a/docs/forum/p2p-foundation/2.md
+++ b/docs/forum/p2p-foundation/2.md
@@ -5,6 +5,7 @@ grand_parent: Forum Posts
 parent: P2P Foundation
 nav_order: 2
 date: 2009-02-15 16:42:00 UTC
+original: http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source?commentId=2003008%3AComment%3A9493
 ---
 
 # Bitcoin open source implementation of P2P currency
