--- a/docs/forum/p2p-foundation/1.md
+++ b/docs/forum/p2p-foundation/1.md
@@ -5,6 +5,7 @@ grand_parent: Forum Posts
 parent: P2P Foundation
 nav_order: 1
 date: 2009-02-11 22:27:00 UTC
+original: http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source
 ---
 
 # Bitcoin open source implementation of P2P currency
