--- a/docs/emails/bitcoin-list/2.md
+++ b/docs/emails/bitcoin-list/2.md
@@ -2,9 +2,10 @@
 layout: default
 title: '[bitcoin-list] Bitcoin v0.1.2 now available'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 2
 date: 2009-01-11 22:32:18 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/21303153/
 ---
 
 # [bitcoin-list] Bitcoin v0.1.2 now available
