--- a/docs/emails/bitcoin-list/3.md
+++ b/docs/emails/bitcoin-list/3.md
@@ -2,9 +2,10 @@
 layout: default
 title: '[bitcoin-list] Bitcoin v0.1 Alpha release notes'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 3
 date: 2009-01-12 20:20:47 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/21312004/
 ---
 
 # [bitcoin-list] Bitcoin v0.1 Alpha release notes
