--- a/docs/emails/bitcoin-list/4.md
+++ b/docs/emails/bitcoin-list/4.md
@@ -2,15 +2,13 @@
 layout: default
 title: '[bitcoin-list] Bitcoin v0.1.3'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 4
 date: 2009-01-12 22:48:23 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/21313152/
 ---
 
 # [bitcoin-list] Bitcoin v0.1.3
-
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
-{: .fs-6 .fw-300 } 
 
 ---
 
