--- a/docs/emails/bitcoin-list/5.md
+++ b/docs/emails/bitcoin-list/5.md
@@ -2,9 +2,10 @@
 layout: default
 title: 'Re: [bitcoin-list] Bitcoin v0.1 released'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 5
 date: 2009-01-16 18:35:32 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/21356305/
 ---
 
 # Re: [bitcoin-list] Bitcoin v0.1 released
