--- a/docs/emails/bitcoin-list/6.md
+++ b/docs/emails/bitcoin-list/6.md
@@ -2,9 +2,10 @@
 layout: default
 title: 'Re: [bitcoin-list] Problems'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 6
 date: 2009-01-25 16:45:25 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/21424626/
 ---
 
 # Re: [bitcoin-list] Problems
