--- a/docs/emails/bitcoin-list/7.md
+++ b/docs/emails/bitcoin-list/7.md
@@ -2,9 +2,10 @@
 layout: default
 title: '[bitcoin-list] Bitcoin v0.1.5 released'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 7
 date: 2009-02-04 19:46:04 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/21500063/
 ---
 
 # [bitcoin-list] Bitcoin v0.1.5 released
