--- a/docs/emails/bitcoin-list/8.md
+++ b/docs/emails/bitcoin-list/8.md
@@ -2,15 +2,13 @@
 layout: default
 title: 'Re: [bitcoin-list] Bitcoin v0.1.5 released'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 8
 date: 2009-02-22 17:47:52 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/21646307/
 ---
 
-# Bitcoin P2P e-cash paper
-
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
-{: .fs-6 .fw-300 } 
+# Re: [bitcoin-list] Bitcoin v0.1.5 released
 
 ---
 
