--- a/docs/emails/bitcoin-list/9.md
+++ b/docs/emails/bitcoin-list/9.md
@@ -2,14 +2,15 @@
 layout: default
 title: 'Re: [bitcoin-list] Bitcoin v0.1.5 released'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 9
 date: 2009-03-04 16:59:12 UTC
+source: https://satoshi.nakamotoinstitute.org/emails/bitcoin-list/27/
 ---
 
-# Bitcoin P2P e-cash paper
+# Re: [bitcoin-list] Bitcoin v0.1.5 released
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi discusses using Bitcoin to timestamp files.
 {: .fs-6 .fw-300 } 
 
 ---
