--- a/docs/emails/bitcoin-list/10.md
+++ b/docs/emails/bitcoin-list/10.md
@@ -2,15 +2,13 @@
 layout: default
 title: 'Re: [bitcoin-list] Does Bitcoin Crash in Windows?'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 10
 date: 2009-10-23 23:57:51 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/23824064/
 ---
 
 # Re: [bitcoin-list] Does Bitcoin Crash in Windows?
-
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
-{: .fs-6 .fw-300 } 
 
 ---
 
