--- a/docs/emails/bitcoin-list/11.md
+++ b/docs/emails/bitcoin-list/11.md
@@ -1,16 +1,14 @@
 ---
-layout: default
+layout: email
 title: '[bitcoin-list] Bitcoin 0.2 released'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 11
 date: 2009-12-17 06:52:09 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/24205662/
 ---
 
 # [bitcoin-list] Bitcoin 0.2 released
-
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
-{: .fs-6 .fw-300 } 
 
 ---
 
