--- a/docs/emails/bitcoin-list/12.md
+++ b/docs/emails/bitcoin-list/12.md
@@ -1,15 +1,16 @@
 ---
-layout: default
+layout: email
 title: '[bitcoin-list] Bitcoin 0.3 released!'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 12
 date: 2010-07-06 21:53:53 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/25686730/
 ---
 
 # [bitcoin-list] Bitcoin 0.3 released!
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi refers to Bitcoin as a way escape "arbitrary inflation."
 {: .fs-6 .fw-300 } 
 
 ---
