--- a/docs/emails/bitcoin-list/13.md
+++ b/docs/emails/bitcoin-list/13.md
@@ -1,16 +1,14 @@
 ---
-layout: default
+layout: email
 title: '[bitcoin-list] Alert: upgrade to bitcoin 0.3.6'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 13
 date: 2010-07-30 06:02:38 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/25843947/
 ---
 
 # [bitcoin-list] Alert: upgrade to bitcoin 0.3.6
-
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
-{: .fs-6 .fw-300 } 
 
 ---
 
