--- a/docs/emails/bitcoin-list/14.md
+++ b/docs/emails/bitcoin-list/14.md
@@ -1,16 +1,14 @@
 ---
-layout: default
+layout: forum
 title: '[bitcoin-list] ALERT - we are investigating a problem'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 14
 date: 2010-08-15 20:38:33 UTC
+original: https://sourceforge.net/p/bitcoin/mailman/message/25954806/
 ---
 
 # [bitcoin-list] ALERT - we are investigating a problem
-
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
-{: .fs-6 .fw-300 } 
 
 ---
 
