--- a/docs/emails/bitcoin-list/15.md
+++ b/docs/emails/bitcoin-list/15.md
@@ -1,16 +1,14 @@
 ---
-layout: default
+layout: email
 title: '[bitcoin-list] Bitcoin 0.3.18 is released'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 15
 date: 2010-12-08 23:11:55 UTC
+original: https://satoshi.nakamotoinstitute.org/emails/bitcoin-list/33/
 ---
 
 # [bitcoin-list] Bitcoin 0.3.18 is released
-
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
-{: .fs-6 .fw-300 } 
 
 ---
 
