--- a/docs/emails/bitcoin-list/16.md
+++ b/docs/emails/bitcoin-list/16.md
@@ -2,15 +2,13 @@
 layout: default
 title: '[bitcoin-list] Bitcoin 0.3.19 is released'
 grand_parent: Emails
-parent: bitcoin-list
+parent: '[bitcoin-list]'
 nav_order: 16
 date: 2010-12-13 16:12:09 UTC
+original: https://satoshi.nakamotoinstitute.org/emails/bitcoin-list/34/
 ---
 
 # [bitcoin-list] Bitcoin 0.3.19 is released
-
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
-{: .fs-6 .fw-300 } 
 
 ---
 
