--- a/docs/emails/bitcoin-list/16.md
+++ b/docs/emails/bitcoin-list/16.md
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: email
 title: '[bitcoin-list] Bitcoin 0.3.19 is released'
 grand_parent: Emails
 parent: '[bitcoin-list]'
