--- a/docs/forum/bitcoin-forum/1.md
+++ b/docs/forum/bitcoin-forum/1.md
@@ -12,8 +12,7 @@ original: https://bitcointalk.org/index.php?topic=5.msg28#msg28
 
 ---
 
-<div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>
-Welcome to the new Bitcoin forum!
+<div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>Welcome to the new Bitcoin forum!
 
 The old forum can still be reached here:
 <a href="http://bitcoin.sourceforge.net/boards/index.php">http://bitcoin.sourceforge.net/boards/index.php</a>
@@ -24,6 +23,4 @@ FAQ
 <a href="http://bitcoin.sourceforge.net/wiki/index.php?page=FAQ">http://bitcoin.sourceforge.net/wiki/index.php?page=FAQ</a>
 
 Download
-<a href="http://sourceforge.net/projects/bitcoin/files/">http://sourceforge.net/projects/bitcoin/files/</a>
-</div>
-</code></pre></div></div>
+<a href="http://sourceforge.net/projects/bitcoin/files/">http://sourceforge.net/projects/bitcoin/files/</a></div></code></pre></div></div>
