--- a/docs/forum/bitcoin-forum/1.md
+++ b/docs/forum/bitcoin-forum/1.md
@@ -23,4 +23,4 @@ FAQ
 <a href="http://bitcoin.sourceforge.net/wiki/index.php?page=FAQ">http://bitcoin.sourceforge.net/wiki/index.php?page=FAQ</a>
 
 Download
-<a href="http://sourceforge.net/projects/bitcoin/files/">http://sourceforge.net/projects/bitcoin/files/</a></div></code></pre></div></div>
+<a href="http://sourceforge.net/projects/bitcoin/files/">http://sourceforge.net/projects/bitcoin/files/</a></div></code></pre></div>
