--- a/docs/forum/bitcoin-forum/12.md
+++ b/docs/forum/bitcoin-forum/12.md
@@ -13,8 +13,7 @@ original: https://bitcointalk.org/index.php?topic=12.msg45#msg45
 ---
 
 <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight">
-<code>	
-Re: A few suggestions
+<code>Re: A few suggestions
 December 10, 2009, 07:31:49 PM
 
 <a href="https://bitcointalk.org/index.php?topic=12.msg44#msg44">Quote from: madhatter2 on December 10, 2009, 02:00:17 PM</a>
