--- a/docs/emails/cryptography/6.md
+++ b/docs/emails/cryptography/6.md
@@ -9,7 +9,7 @@ date: 2008-11-09 01:58:48 UTC
 
 # Bitcoin P2P e-cash paper
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi explains, among other things, that he wrote the code beforer writing the whitepaper.
 {: .fs-6 .fw-300 } 
 
 ---
