--- a/docs/emails/cryptography/10.md
+++ b/docs/emails/cryptography/10.md
@@ -9,7 +9,7 @@ date: 2008-11-10 22:18:20 UTC
 
 # Bitcoin P2P e-cash paper
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi discusses transaction fees, settlement time, and comparisons to credit cards.
 {: .fs-6 .fw-300 } 
 
 ---
