--- a/docs/emails/cryptography/12.md
+++ b/docs/emails/cryptography/12.md
@@ -9,7 +9,7 @@ date: 2008-11-14 18:55:35 UTC
 
 # Bitcoin P2P e-cash paper
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi discusses the attraction Bitcoin might have to libertarins.
 {: .fs-6 .fw-300 } 
 
 ---
