--- a/docs/emails/cryptography/14.md
+++ b/docs/emails/cryptography/14.md
@@ -9,7 +9,7 @@ date: 2008-11-15 18:02:00 UTC
 
 # Bitcoin P2P e-cash paper
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi discusses double-spending and merchant payment processing.
 {: .fs-6 .fw-300 } 
 
 ---
