--- a/docs/emails/cryptography/15.md
+++ b/docs/emails/cryptography/15.md
@@ -9,7 +9,7 @@ date: 2008-11-17 17:24:43 UTC
 
 # Bitcoin P2P e-cash paper
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi describes how long he has worked on coding Bitcoin.
 {: .fs-6 .fw-300 } 
 
 ---
