--- a/docs/emails/cryptography/16.md
+++ b/docs/emails/cryptography/16.md
@@ -9,7 +9,7 @@ date: 2009-01-08 19:27:40 UTC
 
 # Bitcoin v0.1 released
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi officially releases the first Bitcoin client to the world.
 {: .fs-6 .fw-300 } 
 
 ---
