--- a/docs/emails/cryptography/17.md
+++ b/docs/emails/cryptography/17.md
@@ -9,7 +9,7 @@ date: 2009-01-16 16:03:14 UTC
 
 # Bitcoin v0.1 released
 
-The email on the Cryptography Mailing List that announced Bitcoin publicly to the world.
+Satoshi describes the possible future value of Bitcoin and using micropayments to bootstrap the network.
 {: .fs-6 .fw-300 } 
 
 ---
