--- a/docs/forum/bitcoin-forum/1.md
+++ b/docs/forum/bitcoin-forum/1.md
@@ -12,7 +12,10 @@ original: https://bitcointalk.org/index.php?topic=5.msg28#msg28
 
 ---
 
-<div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>Welcome to the new Bitcoin forum!
+<div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code> Welcome to the new Bitcoin forum!
+November 22, 2009, 06:04:28 PM
+
+Welcome to the new Bitcoin forum!
 
 The old forum can still be reached here:
 <a href="http://bitcoin.sourceforge.net/boards/index.php">http://bitcoin.sourceforge.net/boards/index.php</a>
