--- a/docs/forum/bitcoin-forum/17.md
+++ b/docs/forum/bitcoin-forum/17.md
@@ -29,5 +29,4 @@ I think that breaking bitcoin into two apps is ideal. A wxwidgets front end (sin
 
 My head hurts just thinking about that.  Funnelling all the UI backend through a TCP connection would make everything twice as hard.  There's too much bandwidth between the UI and the internal data structures in order to keep the listview control updated, because of the way the listview control works.
 
-I'd rather have command line control, that would get us remote admin and batch automation.
-</code></pre></div>
+I'd rather have command line control, that would get us remote admin and batch automation.</code></pre></div>
