--- a/docs/forum/bitcoin-forum/17.md
+++ b/docs/forum/bitcoin-forum/17.md
@@ -24,7 +24,7 @@ Please don't try PPC.  PPC is big-endian and Bitcoin is little-endian, there wou
 
 Considered autoconf.  Autoconf is a necessity for large projects with a quagmire makefile, but I think we're small enough that it's more optimal without it.  I'd rather keep the makefile simple as long as possible.
 
-Quote
+<a href="https://bitcointalk.org/index.php?topic=12.msg51#msg51">Quote</a>
 I think that breaking bitcoin into two apps is ideal. A wxwidgets front end (since it is mostly all there) and a backend that binds to a control TCP socket. I have been reading over the source to see how hard it would be to break it apart and I think it should be fairly simple. Of course an API would have to be developed.
 
 My head hurts just thinking about that.  Funnelling all the UI backend through a TCP connection would make everything twice as hard.  There's too much bandwidth between the UI and the internal data structures in order to keep the listview control updated, because of the way the listview control works.
