--- a/docs/forum/bitcoin-forum/29.md
+++ b/docs/forum/bitcoin-forum/29.md
@@ -1,6 +1,6 @@
 ---
 layout: forum
-title: 'Re: A newb's test - anyone want to buy a picture for $1?'
+title: "Re: A newb's test - anyone want to buy a picture for $1?"
 grand_parent: Forum Posts
 parent: Bitcoin Forum
 nav_order: 29
