--- a/docs/forum/bitcoin-forum/36.md
+++ b/docs/forum/bitcoin-forum/36.md
@@ -1,6 +1,6 @@
 ---
 layout: forum
-title: 'Re: Win32 CPU Cycles vs 'Live Protection' Engines ?'
+title: "Re: Win32 CPU Cycles vs 'Live Protection' Engines ?"
 grand_parent: Forum Posts
 parent: Bitcoin Forum
 nav_order: 36
