--- a/docs/forum/bitcoin-forum/52.md
+++ b/docs/forum/bitcoin-forum/52.md
@@ -1,6 +1,6 @@
 ---
 layout: forum
-title: 'Re: What's with this odd generation?'
+title: "Re: What's with this odd generation?"
 grand_parent: Forum Posts
 parent: Bitcoin Forum
 nav_order: 52
