--- a/docs/forum/bitcoin-forum/117.md
+++ b/docs/forum/bitcoin-forum/117.md
@@ -1,6 +1,6 @@
 ---
 layout: forum
-title: 'Re: Can't Build r80 from SVN'
+title: "Re: Can't Build r80 from SVN"
 grand_parent: Forum Posts
 parent: Bitcoin Forum
 nav_order: 117
