--- a/docs/forum/bitcoin-forum/104.md
+++ b/docs/forum/bitcoin-forum/104.md
@@ -1,6 +1,6 @@
 ---
 layout: forum
-title: 'Re: Tracing a coin's lineage'
+title: "Re: Tracing a coin's lineage"
 grand_parent: Forum Posts
 parent: Bitcoin Forum
 nav_order: 104
