--- a/docs/forum/bitcoin-forum/156.md
+++ b/docs/forum/bitcoin-forum/156.md
@@ -22,5 +22,6 @@ https://www.bitcoin.org/smf/index.php?topic=191.msg1585#msg1585
 -------------
 If SHA-256 became completely broken, I think we could come to some agreement about what the honest block chain was before the trouble started, lock that in and continue from there with a new hash function.
 
-If the hash breakdown came gradually, we could transition to a new hash in an orderly way.  The software would be programmed to start using a new hash after a certain block number.  Everyone would have to upgrade by that time.  The software could save the new hash of all the old blocks to make sure a different block with the same old hash can't be used.</code></pre></div></div>
--------------
+If the hash breakdown came gradually, we could transition to a new hash in an orderly way.  The software would be programmed to start using a new hash after a certain block number.  Everyone would have to upgrade by that time.  The software could save the new hash of all the old blocks to make sure a different block with the same old hash can't be used.
+-------------</code></pre></div></div>
+
