--- a/docs/forum/bitcoin-forum/199.md
+++ b/docs/forum/bitcoin-forum/199.md
@@ -1,6 +1,6 @@
 ---
 layout: forum
-title: 'Re: "SetIcons(): icon bundle doesn't contain any suitable icon'
+title: "Re: "SetIcons(): icon bundle doesn't contain any suitable icon"'
 grand_parent: Forum Posts
 parent: Bitcoin Forum
 nav_order: 199
