--- a/227.md
+++ b/227.md
@@ -1,6 +1,6 @@
 ---
 layout: forum
-title: 'Re: Nenolod, the guy that wants to prove Bitcoin doesn't work.'
+title: "Re: Nenolod, the guy that wants to prove Bitcoin doesn't work."
 grand_parent: Forum Posts
 parent: Bitcoin Forum
 nav_order: 227
