use page titles for search bar results

--- a/emails/laszlo-hanec/1.md
+++ b/emails/laszlo-hanec/1.md
@@ -1,7 +1,7 @@
 ---
 layout: default
-page_title: Satoshi Email's Laszlo Hanec
-title: Satoshi Email's Laszlo Hanec
+page_title: Satoshi Emails Laszlo Hanec
+title: Satoshi Emails Laszlo Hanec
 grand_parent: Emails
 parent: Laszlo Hanec
 nav_order: 1
