update some meta tags

--- a/forum/bitcoin-forum/1.md
+++ b/forum/bitcoin-forum/1.md
@@ -2,6 +2,7 @@
 layout: forum
 page_title: Welcome to the new Bitcoin forum!
 title: Welcome to the new Bitcoin forum!
+description: Bitcoin Forum welcome post
 grand_parent: Forum Posts
 parent: Bitcoin Forum
 nav_order: 1
