--- a/forum/bitcoin-forum/2.md
+++ b/forum/bitcoin-forum/2.md
@@ -2,6 +2,7 @@
 layout: forum
 page_title: 'Repost: Bitcoin Maturation'
 title: 'Repost: Bitcoin Maturation'
+description: Bitcoin Forum post about bitcoin maturation process
 grand_parent: Forum Posts
 parent: Bitcoin Forum
 nav_order: 2
