--- a/forum/bitcoin-forum/3.md
+++ b/forum/bitcoin-forum/3.md
@@ -2,6 +2,7 @@
 layout: forum
 page_title: 'Request: Make this anonymous?'
 title: 'Request: Make this anonymous?'
+description: Bitcoin Forum post request to make service anonymous
 grand_parent: Forum Posts
 parent: Bitcoin Forum
 nav_order: 3
