--- a/forum/p2p-foundation/2.md
+++ b/forum/p2p-foundation/2.md
@@ -2,6 +2,7 @@
 layout: forum
 page_title: Bitcoin open source implementation of P2P currency
 title: Bitcoin open source implementation of P2P currency
+description: P2P Foundation Forum post about Bitcoin open source implementation of P2P currency on February 15 2009
 grand_parent: Forum Posts
 parent: P2P Foundation
 nav_order: 2
