--- a/emails/gavin-andresen/1.md
+++ b/emails/gavin-andresen/1.md
@@ -9,6 +9,10 @@ date: 2011-04-26
 
 # Satoshi's Last Email
 
+This email, or email excerpt, was quoted by Gavin Andresen in an interview in 2014.
+{: .fs-6 .fw-300 } 
+
+
 ---
 
 ```
